added router and pages

--- a/src/assets/scss/common/navbar.scss
+++ b/src/assets/scss/common/navbar.scss
@@ -42,7 +42,6 @@
   &.isActive,
   &.router-link-active,
   &.router-link-exact-active {
-    color: $purple-color;
-    border-bottom: 1px solid $purple-color-100;
+    text-decoration: underline;
   }
 }
