--- a/src/assets/scss/common/link.scss
+++ b/src/assets/scss/common/link.scss
@@ -1,8 +1,8 @@
 .link {
   cursor: pointer;
-  border-bottom: 1px solid $purple-color-100;
   color: $purple-color;
   &:hover {
+    text-decoration: underline;
     border-bottom: none;
   }
   &.isWhite {
@@ -16,5 +16,11 @@
   &.isTrue {
     border-bottom: 1px solid $success-color;
     color: $success-color;
+  }
+  // active link
+  &.isActive,
+  &.router-link-active,
+  &.router-link-exact-active {
+    text-decoration: underline;
   }
 }
