--- a/src/assets/scss/common/title.scss
+++ b/src/assets/scss/common/title.scss
@@ -1,6 +1,6 @@
 .title {
-  margin-bottom: 20px;
+  margin-bottom: rem(20);
   color: #333333;
-  font-size: 30px;
+  font-size: rem(30);
   font-weight: 700;
 }
