code style fixed by prettier; added prettier, editor configs

--- a/src/assets/scss/common/_common.scss
+++ b/src/assets/scss/common/_common.scss
@@ -1,19 +1,19 @@
 // Default Theme
 
 // titles
-@import "title";
+@import 'title';
 
 // Contorls
-@import "controls";
+@import 'controls';
 
 // Link
-@import "link";
+@import 'link';
 
 // Buttons
-@import "buttons";
+@import 'buttons';
 
 // Navbar
-@import "navbar";
+@import 'navbar';
 
 // Table
-@import "table";
+@import 'table';
