--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,6 +1,6 @@
 // тк мы к ним обращаемся везде ниже
-@import "utils/vars";
-@import "utils/reset";
+@import 'utils/vars';
+@import 'utils/reset';
 
 html {
   line-height: $mainLineHeight;
@@ -122,5 +122,5 @@ section,
   }
 }
 
-@import "./common/_common";
-@import "./helpers/_helpers";
+@import './common/_common';
+@import './helpers/_helpers';
