--- a/src/assets/scss/common/buttons.scss
+++ b/src/assets/scss/common/buttons.scss
@@ -7,13 +7,13 @@
   border-radius: 30px;
 
   // default btn
-  &.btnDefaul {
+  &.btnDefault {
     color: #ffffff;
     border: 1px solid #333333;
     background-color: #333333;
   }
 
-  // primiry btn
+  // primary btn
   &.btnPrimary {
     color: #ffffff;
     border: 1px solid #494ce8;
